# allowy

./: .commitlintrc.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: cd.yml  ci.yml
config/: logging.yaml  sources.yaml
src/: bootstrap.py  config.py  main.py
src/adapters/: file_operator.py  http_trigger.py  scheduler.py
src/adapters/database/: orm.py  repository.py  schema.py
src/adapters/fetcher/: __init__.py  http_fetcher.py
src/adapters/fetcher/parsers/: __init__.py  google.py
src/application/: handlers.py  messagebus.py  unit_of_work.py  views.py
src/application/formatters/: __init__.py  base.py  nginx.py  raw.py  traefik.py
src/core/exceptions/: __init__.py  exceptions.py  handlers.py
src/core/ports/: __init__.py  fetcher.py  file_operator.py  parser.py  repository.py  scheduler.py  trigger.py  unit_of_work.py
src/domain/: __init__.py  commands.py  events.py  model.py  value_objects.py
src/entrypoints/cli/: __init__.py  __main__.py  client.py  config.py  health.py  init.py  source.py  sync.py
src/entrypoints/http/: configs.py  dependencies.py  health.py  initialize.py  ip_sources.py  schemas.py  sync.py
tests/: conftest.py  fakes.py
tests/e2e/: conftest.py  test_config_api.py  test_error_handling.py  test_health_api.py  test_ip_sources_api.py  test_sync_api.py
tests/integration/: conftest.py  test_file_operator.py  test_repository.py  test_unit_of_work.py
tests/unit/adapters/: test_google_parser.py  test_http_fetcher.py
tests/unit/application/: test_formatters.py  test_handlers.py  test_messagebus.py  test_views.py
tests/unit/domain/: test_commands.py  test_events.py  test_ip_source.py  test_value_objects.py
(+6 files in other folders)
