[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allowy"
version = "0.1.0"
description = "IP allowlist syncing service for multiple providers"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "ip-allowlist",
    "nginx",
    "traefik",
    "firewall",
    "crawler",
]
authors = [
    { name = "0xmillennium", email = "0xmillennium@protonmail.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.15.0",
    "python-json-logger>=3.0.0",
]

[project.scripts]
allowy = "src.entrypoints.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "respx>=0.22.0",
    "types-aiofiles>=24.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = false

[tool.pydantic-mypy]
init_typed = true
init_forbid_extra = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true